# blocknotify.net

./: .eslintrc.json  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml
assets/: blocknotify_logo.xcf  snippet_web3auth  target_bounties.md
backend/: Dockerfile  README.md  docker-compose.yml  eventListener.py  pyproject.toml  run.sh
backend/assets/: eventListener.py  simulatePending.py  watchForNewBlocks.py
backend/authuser/migrations/: 0001_initial.py
backend/blockmonitor/: admin.py  apps.py  models.py  serializers.py  views.py
backend/blockmonitor/management/commands/: engine.py
backend/blockmonitor/migrations/: 0001_initial.py
backend/notifier/: settings.py  sniffer.py  urls.py
block-notify-app/: package-lock.json  package.json  tailwind.config.js
block-notify-app/pages/: index.tsx
blockNotify-app/: README.md  package-lock.json  package.json
blockNotify-app/public/: index.html  robots.txt
blockNotify-app/src/: App.tsx  routes.tsx
blockNotify-app/src/components/card/: EventNotif.tsx
blockNotify-app/src/components/fixedPlugin/: FixedPlugin.tsx
blockNotify-app/src/components/footer/: FooterAdmin.tsx  FooterAuth.tsx
blockNotify-app/src/components/navbar/: NavbarAdmin.tsx  NavbarLinksAdmin.tsx
blockNotify-app/src/components/sidebar/components/: Brand.tsx  SidebarCard.tsx
blockNotify-app/src/layouts/admin/: index.tsx
blockNotify-app/src/layouts/auth/: Default.tsx  index.tsx
blockNotify-app/src/theme/: styles.ts
blockNotify-app/src/views/admin/dataTables/variables/: tableDataCheck.ts
blockNotify-app/src/views/admin/default/: index.tsx
blockNotify-app/src/views/auth/signIn/: index.tsx
blockmonitor/: admin.py  models.py  serializers.py  urls.py  views.py
blockmonitor/templates/: base.html
frontend/: .eslintrc.json  Dockerfile  README.md  package-lock.json  package.json
frontend/assets/: background.xcf
frontend/public/: index.html
frontend/src/: App.css  App.js  App.test.js  AutoRoute.js  ChainContext.js  DApp.js  DeleteAccount.js  ErrorHandler.js  Footer.js  Header.js  Message.js  Network.js  Networks.js  Register.js  SelectEvents.js  StatusContext.js  TruncateAndPretify.js  Verify.js  Wallet.js  index.js
frontend/src/components/: Modal.js  RegisterModal.js  VerifyModal.js
notifier/: settings.py  urls.py
solidity/: hardhat.config.js  package-lock.json  package.json
solidity/scripts/: new-block-listener.js  new-block-listener.ts  sign-phone-number.js
