[tool.poetry]
name = "blocknotify-net"
version = "0.1.0"
description = "A notification service that monitors blockchain events."
authors = ["Nik <nik@pyxis.com>"]
readme = "README.md"
packages = [{include = "blocknotify"}]
license = "MIT"


[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
