[tool.poetry]
name = "blocknotify-net"
version = "0.1.0"
description = "A notification service that monitors blockchain events."
authors = ["Nik <nik@pyx.is>"]
readme = "README.md"
#packages = [{include = "blocknotify"}]
license = "MIT"


[tool.poetry.dependencies]
python = "^3.8"
django = "^4.1.7"
dj-database-url = "^1.2.0"
djangorestframework = "^3.14.0"
django-cors-headers = "^3.14.0"
django-ninja = "^0.21.0"
eth-hash = "^0.5.1"
pycryptodome = "^3.17"
twilio = "^7.16.4"
web3 = "^5.31.3"
websocket-client = "^1.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
